[package]
name = "shatter"
version = "0.1.0"
edition = "2021"
authors = ["William Casarin <jb55@jb55.com>"]
license = "MIT"
description = "A fast, zero-copy nostr content parser"
repository = "https://github.com/damus-io/shatter"
keywords = ["nostr"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
env_logger = "0.10.0"
log = "0.4.19"
